fix spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -2121,6 +2121,7 @@ button[class*=-dark]:hover {
 ================================================== */
 .hero_section {
   margin-top: 120px;
+  margin-bottom: 80px;
 }
 .hero_section .heading_text {
   font-size: 54px;
@@ -2162,6 +2163,7 @@ button[class*=-dark]:hover {
   z-index: 1;
   padding: 60px;
   position: relative;
+  text-align: center;
 }
 .hero_image_wrap:after, .hero_image_wrap:before {
   width: 85%;
@@ -3299,7 +3301,7 @@ Responsive For Mobile & Tablet Devices
     padding: 20px;
   }
   .hero_section {
-    padding: 20px 0 100px;
+    padding: 20px 0 10px;
   }
   .hero_section .shape_leaf {
     top: 110px;
@@ -3612,7 +3614,7 @@ Responsive For Mobile & Tablet Devices
     padding: 12px 20px;
   }
   .hero_section {
-    padding: 0px 0 100px;
+    padding: 0 0 0px;
   }
   .hero_image_wrap {
     padding: 30px;
@@ -3746,7 +3748,7 @@ Responsive For Mobile & Tablet Devices
     display: none;
   }
   .hero_section {
-    padding: 0px 0 100px;
+    padding: 0px 0 10px;
   }
   .backtotop .scroll {
     width: 38px;
